fixed submit button on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -359,6 +359,9 @@ textarea{
         resize: vertical;
     }
 
+    #form-container #submit{
+        width: 30%;
+    }
 
 }
 
